# PermutiveAPI

./: .coverage  .gitignore  AGENTS.MD  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  _env  example_AudienceAPI.py  example_CohortAPI.py  pyproject.toml  requirements-dev.txt  requirements.py  scratch.py  setup.cfg  setup.py  test.py  test_APIRequestHandler.py  test_AudienceAPI.py  test_CohortAPI.py  test_import.py  test_module.py
.github/workflows/: ci.yml  codeql.yml  codeql2.yml
Permutive/: UserAPI.py
PermutiveAPI/: APIDataclasses.py  APIMethods.py  APIRequestHandler.py  APIRequestHandler2.py  Audience.py  AudienceAPI.py  Cohort.py  CohortAPI.py  Context.py  Import.py  Import:py  Query.py  README.md  Segment.py  Segmentation.py  Source.py  User.py  UserAPI.py  Utils.py  Workspace.py  Worpspace.py  __init__.py  errors.py  py.typed  source.py
PermutiveAPI/Audience/: Import.py  Segment.py  Source.py  __init__.py
PermutiveAPI/Identify/: Alias.py  Identity.py  __init__.py
PermutiveAPI/_Utils/: __init__.py  file.py  http.py  json.py  list.py
src/: __init__.py  context.py  segmentation.py  workspace.py
src/PermutiveAPI/: Cohort.py  Segmentation.py  Workspace.py  __init__.py  cohort.py  context.py  query.py  segmentation.py  workspace.py
src/PermutiveAPI/Audience/: Import.py  README.md  __init__.py
src/PermutiveAPI/Identify/: Alias.py  README.md
src/PermutiveAPI/_Utils/: http.py  json.py
src/PermutiveAPI/audience/: README.md  imports.py  segment.py  source.py
src/PermutiveAPI/identify/: __init__.py  alias.py  identify.py
src/PermutiveAPI/utils/: http.py  json.py  list.py
src/audience/: __init__.py
src/identify/: README.md  __init__.py  identify.py
tests/: conftest.py  test_alias_identity.py  test_cohort.py  test_context.py  test_import.py  test_segment.py  test_segmentation.py  test_source.py  test_source_segment.py  test_user.py  test_utils.py  test_workspace.py
