[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PermutiveAPI"
version = "v5.2.2"
description = "A Python wrapper for the Permutive API."
readme = "README.md"
authors = [{ name = "fatmambo33", email = "fatmambo33@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = ["requests", "python-dotenv"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
