[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PermutiveAPI"
version = "v5.4.3"
description = "A Python wrapper for the Permutive API."
readme = "README.md"
authors = [{ name = "fatmambo33", email = "fatmambo33@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["requests", "python-dotenv", "pandas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pydocstyle",
    "pytest-pydocstyle",
    "pyright",
    "black",
    "pytest-cov",
]

[tool.setuptools.package-data]
"PermutiveAPI" = ["py.typed"]
