[project]
name = "PermutiveAPI"
version = "v6.0.0"
description = "A Python wrapper for the Permutive API."
readme = "README.md"
authors = [{ name = "fatmambo33", email = "fatmambo33@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["requests", "python-dotenv", "pandas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pydocstyle", "pytest-pydocstyle", "pyright", "black", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/PermutiveAPI"]

[tool.hatch.build.targets.wheel]
packages = ["src/PermutiveAPI"]

[tool.hatch.build.targets.sdist]
include = ["src/PermutiveAPI"]

[tool.pyright]
extraPaths = ["src"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_mode = "auto"
